--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -17,7 +17,7 @@
     <header>
         <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Lucien's Library</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
