--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -48,6 +48,7 @@
         <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
+            <!-- NEIL GAIMAN -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -89,7 +90,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- WARREN ELLIS -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -97,13 +98,10 @@
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                        <img src="../assets/img/Ellis01.jpeg" class="d-block w-100" alt="WarrenEllis01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                        <img src="../assets/img/Ellis02.webp" class="d-block w-100" alt="WarrenElis02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -120,18 +118,15 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
-                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
-                                    Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
-                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <h5 class="card-title">Warren Ellis</h5>
+                                <p class="card-text">Es guionista de cómics, pero también ha escrito novelas, ha colaborado en videojuegos y creado guiones para televisión. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen Transmetropolitan, Global Frequency, Planetary, Nextwave.</small></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!-- BRIAN K VAUGHAM -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -139,13 +134,10 @@
                             <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                        <img src="../assets/img/Vaughan01.jpeg" class="d-block w-100" alt="Vaugham01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                        <img src="../assets/img/Vaughan02.jpeg" class="d-block w-100" alt="Vaugham02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -162,18 +154,15 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
-                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
-                                    Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
-                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <h5 class="card-title">Brian K. Vaughan</h5>
+                                <p class="card-text">Es un guionista de cómic estadounidense conocido por sus trabajos en Y: El último hombre, Ex Machina, Runaways, Los Leones de Bagdad, The Private Eye y Saga.</p>
+                                <p class="card-text"><small class="text-muted">Premio Hugo a la Mejor Historia Gráfica.</small></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!-- BRIAN AZZARELLO -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -181,13 +170,10 @@
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                        <img src="../assets/img/Azzarello01.webp" class="d-block w-100" alt="Azzarello01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                        <img src="../assets/img/Azzarello02.jpeg" class="d-block w-100" alt="Azzarello02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -205,12 +191,9 @@
                         <!--Info. del artista-->
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
-                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
-                                    Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
-                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <h5 class="card-title">Brian Azzarello</h5>
+                                <p class="card-text">Es un escritor estadounidense de Cómics afamado por sus trabajos en la editorial Vertigo, y por sus colaboraciones con dibujantes argentinos como Eduardo Risso y Marcelo Frusin.</p>
+                                <p class="card-text"><small class="text-muted">Es especialmente reconocido por la historieta 100 Balas para el sello Vertigo, editorial adulta de DC.</small></p>
                             </div>
                         </div>
                     </div>
