--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -49,6 +49,7 @@
         <!-- cards de Dibujantes -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <!-- invertimos el orden de las inpares para probar, igual solo se ve bien en desktop-->
+            <!-- DAVE MCKEAN -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -91,7 +92,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- EDUEARDO RISSO -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -99,13 +100,10 @@
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/dave01.jpeg" class="d-block w-100" alt="dave01">
+                                        <img src="../assets/img/Risso01.jpeg" class="d-block w-100" alt="Risso01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/dave02.jpeg" class="d-block w-100" alt="dave02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
+                                        <img src="../assets/img/Risso02.jpeg" class="d-block w-100" alt="Risso02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -122,44 +120,33 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
-                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
-                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
-                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
-                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <h5 class="card-title">Eduardo Risso</h5>
+                                <p class="card-text">Es un dibujante e historietista argentino. Es uno de los más destacados artistas de su medio tanto en su país - donde son famosas sus obras junto a Carlos Trillo - como en Europa, y principalmente en Estados Unidos, donde ha obtenido un amplio reconocimiento por sus trabajos junto a Brian Azzarello.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: 100 Balas; Batman: Broken City.</small></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!-- PIA GUERRA -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
-                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
-                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
-                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
-                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <h5 class="card-title">Pia Guearra</h5>
+                                <p class="card-text">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre.​</p>
+                                <p class="card-text"><small class="text-muted">Premios: Eisner Award for Best Artist/Penciler/Inker, Eisner Award for Best Continuing Series</small></p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/dave01.jpeg" class="d-block w-100" alt="dave01">
+                                        <img src="../assets/img/Guerra01.jpeg" class="d-block w-100" alt="PiaGuerra01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/dave02.jpeg" class="d-block w-100" alt="dave02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
+                                        <img src="../assets/img/Guerra02.jpeg" class="d-block w-100" alt="PiaGuerra02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -177,7 +164,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- DARRICK ROBERTSON -->
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -185,13 +172,10 @@
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/dave01.jpeg" class="d-block w-100" alt="dave01">
+                                        <img src="../assets/img/Robertson01.jpeg" class="d-block w-100" alt="Robertson01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/dave02.jpeg" class="d-block w-100" alt="dave02">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
+                                        <img src="../assets/img/Robertson02.jpeg" class="d-block w-100" alt="Robertson02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -209,13 +193,9 @@
                         <!--Info. del artista-->
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
-                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
-                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
-                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
-                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <h5 class="card-title">Darick W. Robertson</h5>
+                                <p class="card-text">Es un artista estadounidense mejor conocido por su trabajo como ilustrador de cómics en series que co-creó, especialmente Transmetropolitan y The Boys. Robertson ha ilustrado cientos de cómics en sus más de veinte años en la industria.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Space Beaver, Transmetropolitan, Punisher: Born, Wolverine, The Boys, "HAPPY!"</small></p>
                             </div>
                         </div>
                     </div>
