--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Dibujantes</span></h1>
+        <h1 class="mt-3"><span class="fade-mine__content">Dibujantes</span></h1>
         <!-- cards de Dibujantes -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <!-- invertimos el orden de las inpares para probar, igual solo se ve bien en desktop-->
