--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Guionistas</span></h1>
+        <h1 class="mt-3"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <!-- NEIL GAIMAN -->
