--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-      <h1 class="mt-3 text-center fade-mine"><span class="fade-mine__content">Series</span></h1>
+      <h1 class="mt-3"><span class="fade-mine__content">Series</span></h1>
       <article class="serie">
         <h2 class="serie__titulo">The Sandman</h2>
         <!-- carrusel de tapas de la serie -->
