--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Tienda</span></h1>
+        <h1 class="mt-3"><span class="fade-mine__content">Tienda</span></h1>
         <p class="lead">Existen distintas ediciones sobre los titulos, contactenos, y se le brindaran opciones de
             compra.</p>
         <!-- Formulario de contacto -->
